added parameters to queries
